--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
                 <version>3.2.4</version>
+                <configuration>
+                    <relocations>
+                        <relocation>
+                            <pattern>org.bstats</pattern>
+                            <!-- Replace this with your package! -->
+                            <shadedPattern>noahnok.dbdl.files.utils</shadedPattern>
+                        </relocation>
+                    </relocations>
+                </configuration>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -53,18 +62,37 @@
     </build>
 
     <repositories>
+        <!-- Spigot -->
+<!--        <repository>-->
+<!--            <id>spigotmc-repo</id>-->
+<!--            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>-->
+<!--        </repository>-->
+        <!-- bStats -->
+<!--        <repository>-->
+<!--            <id>codemc-repo</id>-->
+<!--            <url>https://repo.codemc.org/repository/maven-public/</url>-->
+<!--        </repository>-->
+        <!-- Mirror -->
         <repository>
-            <id>spigotmc-repo</id>
-            <url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
+            <id>nexus.filli-it.ch</id>
+            <url>https://nexus.filli-it.ch/repository/maven-public/</url>
         </repository>
     </repositories>
 
     <dependencies>
+        <!-- Spigot -->
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.12.2-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
+        </dependency>
+        <!-- bStats -->
+        <dependency>
+            <groupId>org.bstats</groupId>
+            <artifactId>bstats-bukkit</artifactId>
+            <version>1.7</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
